<resources>
    <string name="app_name">Contact list</string>
    <string name="connection_error">Problem :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_name">Name</string>
    <string name="contact_company">Company</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="mobile">Mobile</string>
    <string name="phone">Phone</string>
    <string name="contact_address">%1$s, %2$s</string>
</resources>
