<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/contact_progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_alignParentLeft="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/details_margin">
            <com.facebook.drawee.view.SimpleDraweeView
                fresco:roundedCornerRadius="@dimen/corner_radius_photo"
                android:layout_width="@dimen/details_photo_size"
                android:layout_height="@dimen/details_photo_size"
                android:id="@+id/contact_large_photo"
                android:layout_marginRight="@dimen/details_photo_margin" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:layout_alignTop="@+id/contact_large_photo"
                android:layout_toRightOf="@+id/contact_large_photo"
                android:layout_toEndOf="@+id/contact_large_photo"
                android:id="@+id/label_name" />

            <TextView
                android:id="@+id/contact_detail_name"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_name"
                android:layout_toEndOf="@+id/contact_large_photo"
                android:layout_toRightOf="@+id/contact_large_photo"
                android:text=""
                tools:text="Federico Popoff"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_company"
                android:id="@+id/label_company"
                android:layout_above="@+id/contact_company"
                android:layout_alignLeft="@+id/contact_detail_name"
                android:layout_alignStart="@+id/contact_detail_name" />

            <TextView
                android:id="@+id/contact_company"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/contact_large_photo"
                android:layout_alignLeft="@+id/label_company"
                android:layout_alignStart="@+id/label_company"
                android:text=""
                tools:text="Solstice"></TextView>
            <CheckBox
                android:id="@+id/contact_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="visible"
                android:checked="false"
                android:focusable="false"
                android:clickable="false"
                style="?android:attr/starStyle"
                android:layout_alignTop="@+id/contact_large_photo"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_marginTop="@dimen/details_photo_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/phone"
                android:id="@+id/label_phone"
                android:layout_below="@+id/contact_large_photo"
                android:layout_alignLeft="@+id/contact_large_photo"
                android:layout_alignStart="@+id/contact_large_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="555-555-5555"
                android:id="@+id/contact_home_phone"
                android:layout_below="@+id/label_phone"
                android:layout_alignLeft="@+id/label_phone"
                android:layout_alignStart="@+id/label_phone"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/home"
                android:id="@+id/label_home_phone"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_above="@+id/contact_work_phone"
                android:layout_toRightOf="@+id/contact_home_phone"
                android:layout_toEndOf="@+id/contact_home_phone"
                android:layout_marginLeft="@dimen/margin_left_phone_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/address"
                android:id="@+id/label_address"
                android:layout_marginTop="@dimen/details_label_margin"
                android:layout_below="@+id/contact_mobile_phone"
                android:layout_alignLeft="@+id/contact_street_address"
                android:layout_alignStart="@+id/contact_street_address"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="New York, NY"
                android:id="@+id/contact_city_address"
                android:layout_below="@+id/contact_street_address"
                android:layout_alignLeft="@+id/contact_street_address"
                android:layout_alignStart="@+id/contact_street_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="28 W 27th St"
                android:id="@+id/contact_street_address"
                android:layout_below="@+id/label_address"
                android:layout_alignLeft="@+id/contact_home_phone" />

            <TextView
                android:id="@+id/label_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/contact_city_address"
                android:layout_alignStart="@+id/contact_city_address"
                android:layout_below="@+id/contact_city_address"
                android:layout_marginTop="@dimen/details_label_margin"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="September 10, 1987"
                android:id="@+id/contact_birthday"
                android:layout_below="@+id/label_birthdate"
                android:layout_alignLeft="@+id/contact_city_address" />

            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/label_email"
                android:layout_marginTop="@dimen/details_label_margin"
                android:layout_below="@+id/contact_birthday"
                android:layout_alignLeft="@+id/contact_birthday"
                android:layout_alignStart="@+id/contact_birthday" />

            <TextView
                android:id="@+id/contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/contact_birthday"
                android:layout_below="@+id/label_email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="Email@Mail.com" />

            <TextView
                tools:text="555-555-5555"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/contact_work_phone"
                android:layout_alignLeft="@+id/label_address"
                android:layout_alignStart="@+id/label_address"
                android:layout_below="@+id/contact_home_phone"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/work"
                android:id="@+id/label_work_phone"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_below="@+id/label_home_phone"
                android:layout_alignLeft="@+id/label_home_phone"
                android:layout_alignStart="@+id/label_home_phone" />

            <TextView
                tools:text="555-555-5555"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/contact_mobile_phone"
                android:layout_alignLeft="@+id/label_address"
                android:layout_below="@+id/contact_work_phone"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mobile"
                android:id="@+id/label_mobile_phone"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_below="@+id/label_work_phone"
                android:layout_alignLeft="@+id/label_work_phone"
                android:layout_alignStart="@+id/label_work_phone" />

        </RelativeLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>